Fix target div color in dark mode

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -351,7 +351,7 @@ div.tooltip-inner-custom {
 
 .searchdiv-dark {
     color: white;
-    background-color: #151D29;
+    background-color: #444B55;
     box-shadow: 0 4px 9px 0 rgba(0,0,0,0.68);
     border-bottom-left-radius: 11px;
     border-bottom-right-radius: 11px;
